--- a/IObitUnlocker.Wrapper/Properties/Resources.resx
+++ b/IObitUnlocker.Wrapper/Properties/Resources.resx
@@ -124,22 +124,28 @@
   <data name="IObitUnlockerSyS" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IObitUnlocker.sys;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Original_System32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Original_file\System32\Original_System32.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="Original_System32_Win10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Original_File\System32\Original_System32_Win10.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Original_SysWOW64" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Original_file\SysWOW64\Original_SysWOW64.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="Original_System32_Win11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Original_File\System32\Original_System32_Win11.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Resources_System32_Win11" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Original_file\System32\Resources_System32_Win11.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="Original_SysWOW64_Win10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Original_File\SysWOW64\Original_SysWOW64_Win10.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Resources_SysWOW64_Win11" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Original_file\SysWOW64\Resources_SysWOW64_Win11.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="Original_SysWOW64_Win11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Original_File\SysWOW64\Original_SysWOW64_Win11.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Revise_System32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Resources_file\System32\Resources_System32.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="Revise_System32_Win10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Revise_File\System32\Revise_System32_Win10.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Revise_SysWOW64" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Resources_file\SysWOW64\Resources_SysWOW64.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="Revise_System32_Win11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Revise_File\System32\Revise_System32_Win11.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Revise_SysWOW64_Win10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Revise_File\SysWOW64\Revise_SysWOW64_Win10.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Revise_SysWOW64_Win11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Revise_File\SysWOW64\Revise_SysWOW64_Win11.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
